--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="./01-dia/desafio-1.html">DESAFIO 1</a></li>
         <li><a href="./02-dia/desafio-2.html">DESAFIO 2</a></li>
         <li><a href="./03-dia/desafio-3.html">DESAFIO 3</a></li>
+        <li><a href="./04-dia/desafio-4.html">DESAFIO 4</a></li>
     </ul>
 </body>
 </html>
