Agregue el enlace al desafio 5

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="./02-dia/desafio-2.html">DESAFIO 2</a></li>
         <li><a href="./03-dia/desafio-3.html">DESAFIO 3</a></li>
         <li><a href="./04-dia/desafio-4.html">DESAFIO 4</a></li>
+        <li><a href="./05-dia/desafio-5.html">DESAFIO 5</a></li>
     </ul>
 </body>
 </html>
