Refactorice el codigo del desafio 5 y 6

--- a/05-dia/desafio-5.html
+++ b/05-dia/desafio-5.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DESAFIO 5 - ONE - ALURA LATAM</title>
+    <title>DESAFIO 5 y 6 - ONE - ALURA LATAM</title>
     <link rel="stylesheet" href="./desafio-5.css">
 </head>
 
 <body>
-    <h1>DESAFIO 5 - LISTA DE COMPRAS</h1>
+    <h1>DESAFIO 5 y 6 - LISTA DE COMPRAS</h1>
     <section class="lista">
         <section class="lista__hojaIzquierda">
             <h2 class="lista__hojaIzquierda__titulo">Filtra por Categoria</h2>
@@ -33,8 +33,7 @@
             <h2 class="lista__hojaDerecha__titulo">Listado</h2>
             <section class="lista__hojaDerecha__listado">
                 <h3 class="lista__hojaDerecha__listado_titulo">Todos</h3>
-                <ul class="lista__hojaDerecha__listado_categoria" id="todos"></ul>
-                <ul class="lista__hojaDerecha__listado_categoria" id="especifico"></ul>
+                <ul class="lista__hojaDerecha__listado_categoria" id="listadoItems"></ul>
             </section>
         </section>
     </section>
