Coloque los enlaces a los desafios 6 y 7

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <li><a href="./02-dia/desafio-2.html">DESAFIO 2</a></li>
         <li><a href="./03-dia/desafio-3.html">DESAFIO 3</a></li>
         <li><a href="./04-dia/desafio-4.html">DESAFIO 4</a></li>
-        <li><a href="./05-dia/desafio-5.html">DESAFIO 5</a></li>
+        <li><a href="./05-dia/desafio-5.html">DESAFIO 5 y 6</a></li>
+        <li><a href="./07-dia/desafio-7.html">DESAFIO 7</a></li>
     </ul>
 </body>
 </html>
